        * README
        * VERSION
        * configure.in
        * DIST_build/DIST
        * DIST_build/DIST.exp
        * DIST_build/Makefile.boot
        * DIST_build/README
        * lib/version.tcl
        * bin/httpd.tcl
        Version updates in preparation for a 3.5.1 release
        (3.5.0 remained unreleased)

2004-05-18 Brent Welch <welch@panasas.com>
        * lib/doc.tcl: added [file normalize] to Doc_Handle to
        avoid returning file contents for files whos name
        ends with extra trailing "." characters.

2004-05-14 Colin McCormack <colin@chinix.com>
	* lib/mail.tcl: fixed another config bug for mailserver

2004-05-09 Colin McCormack <colin@chinix.com>
	* lib/mail.tcl: fixed config bug for mailserver
	* lib/log.tcl: made log check for gzip, per sf [949730]
	* debian/: minor changes to chmod install dirs

2004-05-06 Colin McCormack <colin@chinix.com>
	* lib/mail.tcl: new mail facility using tcllib's smtp client
	* bin/httpd.tcl, bin/tclhttpd.rc: -mail option for mail server

2004-05-06 Brent Welch <welch@panasas.com>
        * Various doc updates

2004-05-05 Brent Welch <welch@panasas.com>
        * Various doc updates
        * lib/digest.tcl: fixed use of the md5 package

2004-05-01 Colin McCormack <colin@chinix.com>
	* lib/session.tcl: added a facility to destroy a session cookie.
	Added type name to session cookie name
	* lib/cookie.tcl: added ability to expunge cookies from client.

2004-04-29 Colin McCormack <colin@chinix.com>
	* lib/stdin.tcl: removed history proc which interferes with 
	some third party console packages to no legitimate purpose.

2004-04-29 Colin McCormack <colin@chinix.com>
	* lib/template.tcl: allow non-dynamic templates to control
	content type of returned file.
	* lib/httpd.tcl: fixed sf error '[925210] bad message length in Httpd_Error'
	* lib/cookie.tcl: removed redundant test
	* lib/status.tcl: fixed sf bug '[943990] Status/text uses wrong counter names'
	per patch supplied.
	